[project]
name = "fastapi-ca"
version = "0.1.0"
description = ""
authors = [
    {name = "Jimi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.120.4,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "py-ulid (>=1.0.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
